<resources>
    <string name="app_name">StandBy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_s_n_s">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings_title" />
    <string name="settings_title_value">settings</string>
    <string name="Settings_title">Settings</string>
    <string name="To_anone_text">Click here if you do not know your gender identity or sexual orientation</string>
    <string name="To_anone_text_new">※Click here if you do not know your gender identity or sexual orientation</string>
    <string name="Honorifictitle">Honorific title</string>
    <string name="pronoun_title">Pronoun</string>
    <string name="back_title">Back</string>
    <string name="ClickHere_text">click here</string>
    <string name="suport_anone_text" />
    <string name="support_anone_text_mew" />
    <string name="support_anone_text">Click here if you don\'t understand the above two</string>
    <string name="support_anone_text_new">※Click here if you don\'t understand the above two</string>
    <string name="ChineseName">Jessica</string>
    <string name="maskmanName">Michael</string>
    <string name="manName">Daniel</string>
    <string name="Input_button">Post</string>
    <string name="back_button">back</string>
    <string name="Sarah_name">Sarah</string>
    <string name="chinesecomment">おはようございます！  朝から予定あるけど頑張ります！！ 午後には楽しみにしてるイベントがあるのでわくわくしてます  今日も楽しむぞ！</string>
    <string name="michelcomment">Happy Pride 好きな人とずっと一緒にいられますように。</string>
    <string name="michel_comment">Happy Pride 好きな人とずっと一緒にいられますように。</string>
    <string name="Daniel_comment">今本屋にいるんですけどおすすめの本はありますか？ 小説でもエッセイでもジャンルは何でもいいです 移動中に読みたいです！</string>
    <string name="Daniel_comment_only">明日から新クラスだ。 友達出来るかな。自己紹介どうしよ。 やっぱりドキドキするけど楽しみだー！ 早く明日にならないかな</string>
    <string name="Haruto_name">はると</string>
    <string name="Haruka_name">はるか</string>
    <string name="Haruto_Name">Haruto</string>
    <string name="MK_name">MK</string>
    <string name="Gonchan">ゴンちゃん</string>
    <string name="UserNameText">User Name</string>
    <string name="normal" />
    <string name="mailaddress_text">mail address</string>
    <string name="userName_text">User Name</string>
    <string name="MailAddress_text">Mail Address</string>
    <string name="password_text">Password</string>
    <string name="Registration">Registration</string>
    <string name="acount_settings">Start with the account you have</string>
    <string name="line">Register on LINE</string>
    <string name="Google">Register with Google</string>
    <string name="Twitter">Register on Twitter</string>
    <string name="facebook">Register on Facebook</string>
    <string name="login">Login</string>
    <string name="Guestlogin">GuestLogin</string>
    <string name="newGuestlogin">Guest Login</string>
    <string name="Pronoun">Pronoun</string>
    <string name="Name">名前</string>
    <string name="comment">コメント</string>
    <string name="GenderIdenfifer">性自認</string>
    <string name="sexual">性的指向</string>
    <string name="long2">上記の2つが分からない場合はこちらをクリックしてください</string>
    <string name="long3">＊上記の二つが分からない場合はこちらをクリックしてください</string>
    <string name="hono">敬称</string>
    <string name="daimiei">代名詞</string>
    <string name="mail">メールアドレス</string>
    <string name="username">ユーザーネーム</string>
    <string name="password">パスワード</string>
    <string name="touroku">登録</string>
    <string name="tuitta">Twitterで登録する</string>
    <string name="Facebook">Facebookで登録する</string>
    <string name="Google1">Googleで登録する</string>
    <string name="Line">LINEで登録する</string>
    <string name="youhabe">持っているアカウントから始める</string>
    <string name="newyou">既に持っているアカウントから始める</string>
    <string name="re">登録</string>
    <string name="reg">登録</string>
    <string name="gest">ゲストログイン</string>
    <string name="login_titlell">ログイン</string>

</resources>